Add human-readable export format

--- a/notebooks/STS_evaluation.ipynb
+++ b/notebooks/STS_evaluation.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "n = 20\n",
+    "n = 100\n",
     "groups = 5\n",
     "\n",
     "sstrategy = sampling_random\n",
@@ -56,8 +56,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for x in pairs[:groups]:\n",
-    "    print(f'{x.left.text}\\n--- {x.target}  {x.similarity:.2f} ---\\n{x.right.text}\\n')"
+    "print(format_results(pairs[:groups]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pairs4 = [x for x in pairs if x.target == 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(pairs4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(format_results(pairs4[:5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_results(pairs4, 'sts_sentence_pairs_n100_groups5_seed3179_step1_power6.txt')"
    ]
   },
   {
