Add backup export

--- a/notebooks/STS_evaluation.ipynb
+++ b/notebooks/STS_evaluation.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "n = 100\n",
+    "n = 10\n",
     "groups = 5\n",
     "\n",
     "sstrategy = sampling_random\n",
@@ -56,6 +56,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "write_results_pkl(pairs, f'pairs_n{n}_groups5_seed3179_step1_power6.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "print(format_results(pairs[:groups]))"
    ]
   },
@@ -72,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pairs4 = [x for x in pairs if x.target == 4]"
+    "selection = [x for x in pairs if x.target == 4]"
    ]
   },
   {
@@ -81,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(pairs4)"
+    "len(selection)"
    ]
   },
   {
@@ -90,16 +101,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(format_results(pairs4[:5]))"
+    "write_results_txt(selection, f'pairs_target4_n{n}_groups5_seed3179_step1_power6.txt')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "write_results(pairs4, 'sts_sentence_pairs_n100_groups5_seed3179_step1_power6.txt')"
+    "print(format_results(selection[:5]))"
    ]
   },
   {
