Replace prodigy2df with annotations2df [done]

--- a/notebooks/NER_Evaluation.ipynb
+++ b/notebooks/NER_Evaluation.ipynb
@@ -28,7 +28,8 @@
     "import pandas as pd\n",
     "import spacy\n",
     "\n",
-    "from bbsearch.mining.eval import (prodigy2df, spacy2df, unique_etypes, plot_ner_confusion_matrix, \n",
+    "\n",
+    "from bbsearch.mining.eval import (annotations2df, spacy2df, unique_etypes, plot_ner_confusion_matrix, \n",
     "                                  ner_report, ner_errors, remove_punctuation)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -53,11 +54,11 @@
     "                   'en_ner_bc5cdr_md',\n",
     "                   'en_ner_bionlp13cg_md']\n",
     "\n",
-    "PRODIGY_DB_PATH = Path('/raid/.prodigy/prodigy.db')\n",
+    "ANNOTATIONS_JSONL_PATH = Path('../data_and_models/annotations/ner/')\n",
     "\n",
     "# prodigy_dataset_name: annotator_name\n",
-    "DATASETS_2_ANNOTATORS = OrderedDict([('annotations3_EmmanuelleLogette_2020-07-06_raw1_8FirstLabels', 'EmmanuelleLogette'),\n",
-    "                                     ('annotations4_CharlotteLorin_2020-07-02_raw1_8FirstLabels', 'CharlotteLorin')])\n",
+    "DATASETS_2_ANNOTATORS = OrderedDict([('annotations3_EmmanuelleLogette_2020-07-06_raw1_8FirstLabels.jsonl', 'EmmanuelleLogette'),\n",
+    "                                     ('annotations4_CharlotteLorin_2020-07-02_raw1_8FirstLabels.jsonl', 'CharlotteLorin')])\n",
     "\n",
     "annotators = list(DATASETS_2_ANNOTATORS.values())"
    ]
@@ -75,10 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = sqlite3.connect(PRODIGY_DB_PATH)\n",
-    "\n",
-    "df = OrderedDict([(annotator, prodigy2df(db, dataset_name=dataset)) \n",
-    "                  for dataset, annotator in DATASETS_2_ANNOTATORS.items()])\n",
+    "df = OrderedDict([(annotator, annotations2df(ANNOTATIONS_JSONL_PATH / annotations_file)) \n",
+    "                  for annotations_file, annotator in DATASETS_2_ANNOTATORS.items()])\n",
     "\n",
     "# Inner join: look at annotations for the same tokens (id) of the same sentences (source)\n",
     "df = df[annotators[1]].merge(df[annotators[0]], \n",
