Add cherry picking strategies (notebook)

--- a/notebooks/STS_evaluation.ipynb
+++ b/notebooks/STS_evaluation.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import sqlalchemy\n",
+    "\n",
     "from bbsearch.ml.sts import *"
    ]
   },
@@ -34,8 +35,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "\n",
     "n = 10\n",
     "groups = 5\n",
     "\n",
@@ -45,18 +44,7 @@
     "pstrategy = pairing_powerlaw\n",
     "pparams = dict(step=1, power=6)\n",
     "\n",
-    "pairs = pair_sentences(n, groups, sstrategy, sparams, pstrategy, pparams, model, embeddings, engine)\n",
-    "\n",
-    "# ~ 15 secs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write_results_pkl(pairs, f'pairs_n{n}_groups5_seed3179_step1_power6.txt')"
+    "pairs = pair_sentences(n, groups, sstrategy, sparams, pstrategy, pparams, model, embeddings, engine)"
    ]
   },
   {
@@ -75,7 +63,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "write_results_pkl(pairs, 'pairs_n500_groups5_seed3179_step1_power6.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment"
+   ]
   },
   {
    "cell_type": "code",
@@ -83,7 +87,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selection = [x for x in pairs if x.target == 4]"
+    "import spacy\n",
+    "\n",
+    "from bbsearch.ml.sts import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load('en_core_sci_lg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('pairs_n500_groups5_seed3179_step1_power6.pkl', 'rb') as f:\n",
+    "    pairs = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ok(pair: Pair) -> bool:\n",
+    "    \n",
+    "    def c(f):\n",
+    "        return f(pair.left.text) and f(pair.right.text)\n",
+    "    \n",
+    "    def f1(text):\n",
+    "        return text[0].isupper()\n",
+    "    \n",
+    "    def f2(text):\n",
+    "        return 100 <= len(text) <= 300\n",
+    "    \n",
+    "    def c3():\n",
+    "        doc0 = nlp(pair.left.text)\n",
+    "        doc1 = nlp(pair.right.text)\n",
+    "        set0 = {x.lemma_ for x in doc0 if x.is_alpha}\n",
+    "        set1 = {x.lemma_ for x in doc1 if x.is_alpha}\n",
+    "        dissim = len(set0 ^ set1) / len(set0 | set1)\n",
+    "        return dissim > 0.6\n",
+    "    \n",
+    "    return c(f1) and c(f2) and c3()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selection = [x for x in pairs if x.target == 4 and ok(x)]"
    ]
   },
   {
@@ -98,21 +160,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write_results_txt(selection, f'pairs_target4_n{n}_groups5_seed3179_step1_power6.txt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "print(format_results(selection[:5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_results_txt(selection, f'selected_pairs_n500_groups5_seed3179_step1_power6.txt')"
    ]
   },
   {
