Add the keyword sampling strategy

--- a/notebooks/STS_evaluation.ipynb
+++ b/notebooks/STS_evaluation.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import sqlalchemy\n",
+    "import pandas as pd\n",
     "\n",
     "from bbsearch.ml.sts import *"
    ]
@@ -17,16 +18,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "\n",
     "version='cord19_v35'\n",
     "\n",
     "model = load_model_bsv()\n",
     "embeddings = load_embeddings_bsv(version)\n",
-    "engine = sqlalchemy.create_engine(f'mysql+pymysql://guest:guest@dgx1.bbp.epfl.ch:8853/{version}')\n",
-    "limit = sentences_count(engine)\n",
+    "engine = sqlalchemy.create_engine(f'mysql+pymysql://guest:guest@dgx1.bbp.epfl.ch:8853/{version}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences = pd.read_sql(f\"SELECT sentence_id, text FROM sentences LIMIT 100000\", engine, 'sentence_id')\n",
+    "# All keywords in bold from BBS Ontology v0.3 on 17.09.2020.\n",
+    "keywords = {'pathogens', 'cardiac injury', 'cardiovascular disease', 'sars',\n",
+    "            'acute respiratory distress syndrome', 'gas exchange', 'inflammation',\n",
+    "            'sars-cov-2 infection', 'viral entry', 'glucose metabolism', 'golgi', 'human',\n",
+    "            'dry cough', 'mammals', 'cardiovascular injury', 'glycation', 'endoplasmic reticulum',\n",
+    "            'carbohydrates', 'innate immunity', 'igt', 'polysaccharide', 'hypertension',\n",
+    "            'thrombotic events', 'neutrophils', 'dc cells', 'obesity', 'congested cough',\n",
+    "            'influenzavirus', 'viral replication', 'septic shock', 'macrophages', 'cvd', 'lactate',\n",
+    "            'myalgia', 'chest pain', 'oxygen', 'mucociliary clearance', 'high blood sugar level',\n",
+    "            'respiratory failure', 'fever', 'systemic disorder', 'flu', 'influenzae',\n",
+    "            'hyperglycemia', 'impaired glucose tolerance', 'iron',\n",
+    "            'severe acute respiratory syndrome', 'immunity', 'host defense',\n",
+    "            'respiratory viral infection', 'multi-organs failure', 'blood clot',\n",
+    "            'viral infection', 'hypoxia', 'glucose homeostasis', 'vasoconstriction', 'covid-19',\n",
+    "            'sars-cov-2', 'fatigue', 'multiple organ failure', 'productive cough',\n",
+    "            'adaptive immunity', 'atp', 'bacteria', 'nk cells', 'coagulation', 'ards', 'diarrhea',\n",
+    "            'cytokine storm', 'dendritic cells', 'pneumonia', 'thrombosis', 'phagocytosis',\n",
+    "            'alveolar macrophages', 'glucose', 'clearance', 'epithelial cells', 'glucose uptake',\n",
+    "            'coronavirus', 'plasma membrane', 'lymphocytes', 'oxidative stress', 'glycans',\n",
+    "            'glycolysis', 'pulmonary embolism', 'glycosylation', 'viruses',\n",
+    "            'viral respiratory tract infection', 'diabetes', 'life-cycle', 'mammalia',\n",
+    "            'antimicrobials activity', 'ketones', 'immune system', 'pathogen'}\n",
+    "seed = 3179\n",
     "\n",
-    "# ~ 45 secs"
+    "sstrategy = sampling_keywords\n",
+    "sparams = dict(sentences=sentences, keywords=keywords, seed=seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# limit = sentences_count(engine)\n",
+    "# seed = 3179\n",
+    "\n",
+    "# sstrategy = sampling_random\n",
+    "# sparams = dict(limit=limit, seed=seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pstrategy = pairing_powerlaw\n",
+    "pparams = dict(step=1, power=6)"
    ]
   },
   {
@@ -37,12 +91,6 @@
    "source": [
     "n = 10\n",
     "groups = 5\n",
-    "\n",
-    "sstrategy = sampling_random\n",
-    "sparams = dict(limit=limit, seed=3179)\n",
-    "\n",
-    "pstrategy = pairing_powerlaw\n",
-    "pparams = dict(step=1, power=6)\n",
     "\n",
     "pairs = pair_sentences(n, groups, sstrategy, sparams, pstrategy, pparams, model, embeddings, engine)"
    ]
@@ -64,21 +112,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_results_pkl(pairs, 'pairs_n500_groups5_seed3179_step1_power6.pkl')"
+    "write_results_pkl(pairs, f'pairs_n{n}_groups{groups}_seed{seed}.pkl')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Experiment"
+    "---"
    ]
   },
   {
@@ -87,9 +128,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import spacy\n",
+    "import re\n",
     "\n",
-    "from bbsearch.ml.sts import *"
+    "import spacy"
    ]
   },
   {
@@ -107,8 +148,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('pairs_n500_groups5_seed3179_step1_power6.pkl', 'rb') as f:\n",
-    "    pairs = pickle.load(f)"
+    "# with open(f'pairs_n{n}_groups{groups}_seed{seed}.pkl, 'rb') as f:\n",
+    "#     pairs = pickle.load(f)"
    ]
   },
   {
@@ -118,15 +159,12 @@
    "outputs": [],
    "source": [
     "def ok(pair: Pair) -> bool:\n",
+    "\n",
+    "    def c1():\n",
+    "        return re.match('^[A-Z][a-z]+ .*', pair.right.text)\n",
     "    \n",
-    "    def c(f):\n",
-    "        return f(pair.left.text) and f(pair.right.text)\n",
-    "    \n",
-    "    def f1(text):\n",
-    "        return text[0].isupper()\n",
-    "    \n",
-    "    def f2(text):\n",
-    "        return 100 <= len(text) <= 300\n",
+    "    def c2():\n",
+    "        return 100 <= len(pair.right.text) <= 300\n",
     "    \n",
     "    def c3():\n",
     "        doc0 = nlp(pair.left.text)\n",
@@ -136,7 +174,7 @@
     "        dissim = len(set0 ^ set1) / len(set0 | set1)\n",
     "        return dissim > 0.6\n",
     "    \n",
-    "    return c(f1) and c(f2) and c3()"
+    "    return c1() and c2() and c3()"
    ]
   },
   {
@@ -174,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_results_txt(selection, f'selected_pairs_n500_groups5_seed3179_step1_power6.txt')"
+    "write_results_txt(selection, f'selected_pairs_n{n}_groups{groups}_seed{seed}.txt')"
    ]
   },
   {
