Build dataset of 20 pairs of BIOSSES score 4

--- a/notebooks/STS_evaluation.ipynb
+++ b/notebooks/STS_evaluation.ipynb
@@ -18,6 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "version='cord19_v35'\n",
     "\n",
     "model = load_model_bsv()\n",
@@ -31,7 +33,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentences = pd.read_sql(f\"SELECT sentence_id, text FROM sentences LIMIT 100000\", engine, 'sentence_id')\n",
+    "%%time\n",
+    "\n",
+    "sentences = pd.read_sql(f\"SELECT sentence_id, text FROM sentences\", engine, 'sentence_id')\n",
     "# All keywords in bold from BBS Ontology v0.3 on 17.09.2020.\n",
     "keywords = {'pathogens', 'cardiac injury', 'cardiovascular disease', 'sars',\n",
     "            'acute respiratory distress syndrome', 'gas exchange', 'inflammation',\n",
@@ -89,7 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 10\n",
+    "%%time\n",
+    "\n",
+    "n = 1000\n",
     "groups = 5\n",
     "\n",
     "pairs = pair_sentences(n, groups, sstrategy, sparams, pstrategy, pparams, model, embeddings, engine)"
@@ -139,6 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "nlp = spacy.load('en_core_sci_lg')"
    ]
   },
@@ -183,6 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "selection = [x for x in pairs if x.target == 4 and ok(x)]"
    ]
   },
