Add timing upper bounds on DGX-1 (notebook)

--- a/notebooks/STS_evaluation.ipynb
+++ b/notebooks/STS_evaluation.ipynb
@@ -24,7 +24,9 @@
     "\n",
     "model = load_model_bsv()\n",
     "embeddings = load_embeddings_bsv(version)\n",
-    "engine = sqlalchemy.create_engine(f'mysql+pymysql://guest:guest@dgx1.bbp.epfl.ch:8853/{version}')"
+    "engine = sqlalchemy.create_engine(f'mysql+pymysql://guest:guest@dgx1.bbp.epfl.ch:8853/{version}')\n",
+    "\n",
+    "# < 45 s"
    ]
   },
   {
@@ -61,7 +63,9 @@
     "seed = 3179\n",
     "\n",
     "sstrategy = sampling_keywords\n",
-    "sparams = dict(sentences=sentences, keywords=keywords, seed=seed)"
+    "sparams = dict(sentences=sentences, keywords=keywords, seed=seed)\n",
+    "\n",
+    "# < 4m 30s"
    ]
   },
   {
@@ -95,10 +99,21 @@
    "source": [
     "%%time\n",
     "\n",
-    "n = 1000\n",
+    "n = 750\n",
     "groups = 5\n",
     "\n",
-    "pairs = pair_sentences(n, groups, sstrategy, sparams, pstrategy, pparams, model, embeddings, engine)"
+    "pairs = pair_sentences(n, groups, sstrategy, sparams, pstrategy, pparams, model, embeddings, engine)\n",
+    "\n",
+    "# < 48m 30s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_results_pkl(pairs, f'pairs_n{n}_groups{groups}_seed{seed}.pkl')"
    ]
   },
   {
@@ -110,15 +125,6 @@
    "outputs": [],
    "source": [
     "print(format_results(pairs[:groups]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write_results_pkl(pairs, f'pairs_n{n}_groups{groups}_seed{seed}.pkl')"
    ]
   },
   {
@@ -146,7 +152,10 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "nlp = spacy.load('en_core_sci_lg')"
+    "\n",
+    "nlp = spacy.load('en_core_sci_lg')\n",
+    "\n",
+    "# < 15 s"
    ]
   },
   {
@@ -191,7 +200,10 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "selection = [x for x in pairs if x.target == 4 and ok(x)]"
+    "\n",
+    "selection = [x for x in pairs if x.target == 4 and ok(x)]\n",
+    "\n",
+    "# ~ 2 s"
    ]
   },
   {
