Faster & Simpler method (notebook part)

--- a/notebooks/STS_evaluation.ipynb
+++ b/notebooks/STS_evaluation.ipynb
@@ -6,10 +6,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlalchemy\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "VERSION = 'cord19_v47'  # 'cord19_v35'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FIRST_RUN = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DEBUG_RUN = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ! pip install pyarrow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from typing import List\n",
+    "from pathlib import Path\n",
+    "from datetime import datetime\n",
+    "from collections import namedtuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import spacy\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
-    "from bbsearch.ml.sts import *"
+    "from tqdm import tqdm\n",
+    "from bbsearch.utils import H5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load sentences"
    ]
   },
   {
@@ -18,15 +92,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
+    "filename = f'sentences_{VERSION}.parquet'\n",
     "\n",
-    "version='cord19_v35'\n",
+    "if FIRST_RUN:\n",
+    "    import sqlalchemy\n",
+    "    engine = sqlalchemy.create_engine(f'mysql+pymysql://guest:guest@dgx1.bbp.epfl.ch:8853/{VERSION}')\n",
+    "    sentences = pd.read_sql(f\"SELECT sentence_id, text FROM sentences\", engine, 'sentence_id')\n",
+    "    sentences.to_parquet(filename, index=True)\n",
+    "else:\n",
+    "    sentences = pd.read_parquet(filename)\n",
     "\n",
-    "model = load_model_bsv()\n",
-    "embeddings = load_embeddings_bsv(version)\n",
-    "engine = sqlalchemy.create_engine(f'mysql+pymysql://guest:guest@dgx1.bbp.epfl.ch:8853/{version}')\n",
+    "if DEBUG_RUN:\n",
+    "    sentences = sentences.sample(10000)\n",
     "\n",
-    "# < 45 s"
+    "scount = sentences.size\n",
+    "print(f'{scount:,} sentences')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Explore sentences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Duplicates"
    ]
   },
   {
@@ -35,10 +129,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
+    "sentences = sentences.drop_duplicates()\n",
     "\n",
-    "sentences = pd.read_sql(f\"SELECT sentence_id, text FROM sentences\", engine, 'sentence_id')\n",
+    "dcount = sentences.size\n",
+    "print(f'{dcount:,} sentences (- {scount-dcount:,} duplicates)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences.text.str.len().hist(figsize=(8, 6), bins=75, log=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Select sentences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Strategies:\n",
+    "- [x] keywords\n",
+    "- [ ] annotations\n",
+    "- [ ] k-means\n",
+    "- [ ] LDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Keywords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# All keywords in bold from BBS Ontology v0.3 on 17.09.2020.\n",
+    "\n",
     "keywords = {'pathogens', 'cardiac injury', 'cardiovascular disease', 'sars',\n",
     "            'acute respiratory distress syndrome', 'gas exchange', 'inflammation',\n",
     "            'sars-cov-2 infection', 'viral entry', 'glucose metabolism', 'golgi', 'human',\n",
@@ -59,13 +204,7 @@
     "            'coronavirus', 'plasma membrane', 'lymphocytes', 'oxidative stress', 'glycans',\n",
     "            'glycolysis', 'pulmonary embolism', 'glycosylation', 'viruses',\n",
     "            'viral respiratory tract infection', 'diabetes', 'life-cycle', 'mammalia',\n",
-    "            'antimicrobials activity', 'ketones', 'immune system', 'pathogen'}\n",
-    "seed = 3179\n",
-    "\n",
-    "sstrategy = sampling_keywords\n",
-    "sparams = dict(sentences=sentences, keywords=keywords, seed=seed)\n",
-    "\n",
-    "# < 4m 30s"
+    "            'antimicrobials activity', 'ketones', 'immune system', 'pathogen'}"
    ]
   },
   {
@@ -74,11 +213,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# limit = sentences_count(engine)\n",
-    "# seed = 3179\n",
+    "def ok(text: str) -> pd.Series:\n",
+    "    conditions = (\n",
+    "        100 >= len(text) <= 300,\n",
+    "        re.match('^[A-Z][a-z]+ .*', text),\n",
+    "        not {x.lower() for x in text.split()}.isdisjoint(keywords),  # TODO Improve matching.\n",
+    "        # TODO Keep only English.\n",
+    "    )\n",
+    "    return all(conditions)\n",
     "\n",
-    "# sstrategy = sampling_random\n",
-    "# sparams = dict(limit=limit, seed=seed)"
+    "filtered = sentences[sentences.text.map(lambda x: ok(x))]\n",
+    "\n",
+    "fcount = filtered.size\n",
+    "print(f'{fcount:,} sentences ({scount-fcount:,} not selected)')"
    ]
   },
   {
@@ -87,51 +234,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pstrategy = pairing_powerlaw\n",
-    "pparams = dict(step=1, power=6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "\n",
-    "n = 750\n",
-    "groups = 5\n",
-    "\n",
-    "pairs = pair_sentences(n, groups, sstrategy, sparams, pstrategy, pparams, model, embeddings, engine)\n",
-    "\n",
-    "# < 48m 30s  # n = 1000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write_results_pkl(pairs, f'pairs_n{n}_groups{groups}_seed{seed}.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "print(format_results(pairs[:groups]))"
+    "filtered['mapping'] = np.arange(fcount)  # FIXME SettingWithCopyWarning"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "# Load embeddings"
    ]
   },
   {
@@ -140,9 +250,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
+    "def load_embeddings(model: str, version: str, indices: np.ndarray) -> torch.Tensor:\n",
+    "    # 'model' in ['Sent2Vec', 'BSV']\n",
+    "    path = Path(f'/raid/sync/proj115/bbs_data/{version}/embeddings/embeddings.h5')\n",
+    "    embeddings = H5.load(path, model, 10000, indices)[1:]\n",
+    "    tensor = torch.from_numpy(embeddings)\n",
+    "    norm = torch.norm(tensor, dim=1, keepdim=True)\n",
+    "    norm[norm == 0] = 1\n",
+    "    tensor /= norm\n",
+    "    return tensor\n",
     "\n",
-    "import spacy"
+    "mapping = filtered.index.values - 1\n",
+    "embeddings = load_embeddings('Sent2Vec', VERSION, mapping)\n",
+    "\n",
+    "ecount = embeddings.size()[0]\n",
+    "print(f'{ecount == fcount} (- {fcount-ecount:,})')  # FIXME One filtered sentence_id doesn't exist in the embeddings?!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sample sentences"
    ]
   },
   {
@@ -151,11 +280,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
+    "n = 10\n",
+    "seed= 3719\n",
     "\n",
-    "nlp = spacy.load('en_core_sci_lg')\n",
-    "\n",
-    "# < 15 s"
+    "sampled = filtered.sample(n, random_state=seed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pair sentences"
    ]
   },
   {
@@ -164,8 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with open(f'pairs_n{n}_groups{groups}_seed{seed}.pkl, 'rb') as f:\n",
-    "#     pairs = pickle.load(f)"
+    "nlp = spacy.load('en_core_sci_lg')"
    ]
   },
   {
@@ -174,45 +308,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ok(pair: Pair) -> bool:\n",
+    "Sentence = namedtuple('Sentence', 'id, text')\n",
+    "Pair = namedtuple('Pair', 'left, right, similarity, dissimilarity')\n",
     "\n",
-    "    def c1():\n",
-    "        return re.match('^[A-Z][a-z]+ .*', pair.right.text)\n",
+    "def compute_similarities(index: int, embeddings: torch.Tensor) -> torch.Tensor:\n",
+    "    embedding = embeddings[index]\n",
+    "    norm = torch.norm(embedding).item()\n",
+    "    norm = 1 if norm == 0 else norm\n",
+    "    embedding /= norm\n",
+    "    return torch.nn.functional.linear(embedding, embeddings)\n",
+    "\n",
+    "# c = 0\n",
+    "# i = 0\n",
+    "pairs = []\n",
+    "\n",
+    "for x in tqdm(sampled.itertuples(), total=n):\n",
+    "    # while c < n and i < fcount:\n",
+    "        # i += 1\n",
     "    \n",
-    "    def c2():\n",
-    "        return 100 <= len(pair.right.text) <= 300\n",
-    "    \n",
-    "    def c3():\n",
-    "        doc0 = nlp(pair.left.text)\n",
-    "        doc1 = nlp(pair.right.text)\n",
-    "        set0 = {x.lemma_ for x in doc0 if x.is_alpha}\n",
-    "        set1 = {x.lemma_ for x in doc1 if x.is_alpha}\n",
-    "        dissim = len(set0 ^ set1) / len(set0 | set1)\n",
-    "        return dissim > 0.6\n",
-    "    \n",
-    "    return c1() and c2() and c3()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
+    "    similarities = compute_similarities(x.mapping, embeddings)\n",
+    "    sims, idxs = similarities.sort(descending=True)\n",
     "\n",
-    "selection = [x for x in pairs if x.target == 4 and ok(x)]\n",
+    "    rank = 0  # FIXME\n",
     "\n",
-    "# ~ 2 s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(selection)"
+    "    sim = sims[1:][rank].item()\n",
+    "    idx = idxs[1:][rank].item()\n",
+    "\n",
+    "    s0 = Sentence(x.Index, x.text)\n",
+    "    row = filtered.loc[filtered.mapping == idx]\n",
+    "    s1 = Sentence(row.index.item(), row.text.item())\n",
+    "\n",
+    "    doc0 = nlp(s0.text)\n",
+    "    doc1 = nlp(s1.text)\n",
+    "    set0 = {x.lemma_ for x in doc0 if x.is_alpha}\n",
+    "    set1 = {x.lemma_ for x in doc1 if x.is_alpha}\n",
+    "    dissimilarity = min(len(set0 - set1) / len(set0), len(set1 - set0) / len(set1))\n",
+    "\n",
+    "    pairs.append(Pair(s0, s1, sim, dissimilarity))\n",
+    "        # c += 1\n",
+    "\n",
+    "# pcount = len(pairs)\n",
+    "# print(f'Pairing succeded? {pcount == n} ({n-pcount:,} remaining pairings)')"
    ]
   },
   {
@@ -223,7 +359,20 @@
    },
    "outputs": [],
    "source": [
-    "print(format_results(selection[:5]))"
+    "def format_results(pairs: List[Pair]) -> str:\n",
+    "    def _(i, x):\n",
+    "        return (\n",
+    "            f'pair: {i}  id1: {x.left.id}  id2: {x.right.id}  '\n",
+    "            f'sim: {x.similarity:.3f}  dissim: {x.dissimilarity:.3f}\\n'\n",
+    "            f'-\\n'\n",
+    "            f'{x.left.text.strip()}\\n'\n",
+    "            f'-\\n'\n",
+    "            f'{x.right.text.strip()}\\n'\n",
+    "        )\n",
+    "    formatted = (_(i, x) for i, x in enumerate(pairs))\n",
+    "    return '\\n\\n'.join(formatted)\n",
+    "\n",
+    "print(format_results(pairs[:10]))"
    ]
   },
   {
@@ -232,7 +381,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_results_txt(selection, f'selected_pairs_n{n}_groups{groups}_seed{seed}.txt')"
+    "def write_results_txt(pairs: List[Pair], n: int, directory: str) -> None:\n",
+    "    time =  datetime.now().strftime(\"%Y-%m-%d_%Hh%M\")\n",
+    "    content = format_results(pairs)\n",
+    "    path = Path(directory, f'pairs_n{n}_{time}.txt')\n",
+    "    path.write_text(content, encoding='utf-8')\n",
+    "\n",
+    "write_results_txt(pairs, n, '.')"
    ]
   },
   {
